[gd_scene load_steps=23 format=3 uid="uid://b0mwue1wagig2"]

[ext_resource type="Script" path="res://Scripts/Levels/TransitionNeutral.gd" id="1_0vamy"]
[ext_resource type="Texture2D" uid="uid://d11u5b3ljlxuy" path="res://Assets/Transition/Neutral/transition_neutral_0000.png" id="2_d21kj"]
[ext_resource type="Texture2D" uid="uid://dbjk5uaw068ce" path="res://Assets/Transition/Neutral/transition_neutral_0001.png" id="3_t6pcc"]
[ext_resource type="Texture2D" uid="uid://b27fmnhxe3yqf" path="res://Assets/Transition/Neutral/transition_neutral_0002.png" id="4_abt6m"]
[ext_resource type="Texture2D" uid="uid://b4ytab3lac2lm" path="res://Assets/Transition/Neutral/transition_neutral_0003.png" id="5_q5emi"]
[ext_resource type="Texture2D" uid="uid://caq3yln62oewy" path="res://Assets/Transition/Neutral/transition_neutral_0004.png" id="6_3ox56"]
[ext_resource type="Texture2D" uid="uid://cfujjpu7f5ih7" path="res://Assets/Transition/Neutral/transition_neutral_0005.png" id="7_8c17w"]
[ext_resource type="Shader" path="res://Shaders/grain.gdshader" id="8_33ne0"]
[ext_resource type="FontFile" uid="uid://c4041rmkmpuiq" path="res://Fonts/PLANK___.TTF" id="9_55b3r"]
[ext_resource type="Shader" path="res://Shaders/SpeedLines.gdshader" id="10_01lb5"]
[ext_resource type="FontFile" uid="uid://dohjlwv7dn6k7" path="res://Fonts/Excelorate-Font.otf" id="11_nf5ka"]

[sub_resource type="Animation" id="Animation_obxqi"]
length = 0.001
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_d21kj")]
}

[sub_resource type="Animation" id="Animation_768tp"]
resource_name = "yapping"
length = 1.50003
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("2_d21kj"), ExtResource("3_t6pcc"), ExtResource("4_abt6m"), ExtResource("5_q5emi"), ExtResource("6_3ox56"), ExtResource("7_8c17w")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5nvni"]
_data = {
"RESET": SubResource("Animation_obxqi"),
"yapping": SubResource("Animation_768tp")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gxgsv"]
shader = ExtResource("8_33ne0")
shader_parameter/grain_amount = 0.03
shader_parameter/grain_size = 1.5

[sub_resource type="Curve" id="Curve_adnpg"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 1.4, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_lep8s"]
width = 32
curve = SubResource("Curve_adnpg")

[sub_resource type="Curve" id="Curve_tqjxj"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 1.4, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_5d5hn"]
width = 1070
curve = SubResource("Curve_tqjxj")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_pe35b"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_etrbh"]
width = 4000
height = 4000
noise = SubResource("FastNoiseLite_pe35b")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_esvc7"]
shader = ExtResource("10_01lb5")
shader_parameter/alpha = 1.0
shader_parameter/speed = 10.0
shader_parameter/noise = SubResource("NoiseTexture2D_etrbh")
shader_parameter/falloff = SubResource("CurveTexture_lep8s")
shader_parameter/lineFalloff = SubResource("CurveTexture_5d5hn")

[node name="Node2D" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_0vamy")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_d21kj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../TextureRect")
libraries = {
"": SubResource("AnimationLibrary_5nvni")
}

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_gxgsv")
layout_mode = 0
offset_right = 1280.0
offset_bottom = 960.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 50

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0.498039, 1, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("9_55b3r")
theme_override_font_sizes/font_size = 100
text = "Label
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Marker1" type="Marker2D" parent="CanvasLayer/MarginContainer"]
position = Vector2(160, 700)

[node name="Marker2" type="Marker2D" parent="CanvasLayer/MarginContainer"]
position = Vector2(480, 700)

[node name="Marker3" type="Marker2D" parent="CanvasLayer/MarginContainer"]
position = Vector2(800, 700)

[node name="Marker4" type="Marker2D" parent="CanvasLayer/MarginContainer"]
position = Vector2(1120, 700)

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="ColorRect2" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_esvc7")
layout_mode = 0
offset_right = 1280.0
offset_bottom = 960.0
color = Color(0.878431, 0, 0.596078, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -216.0
offset_right = 216.0
offset_bottom = 58.0
grow_horizontal = 2
theme_override_constants/margin_top = 100

[node name="Label" type="Label" parent="ColorRect2/MarginContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(1, 0, 0.870588, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("11_nf5ka")
theme_override_font_sizes/font_size = 70
text = "Speed up!"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
